--- a/src/pages/posts/podnetworkcast.mdx
+++ b/src/pages/posts/podnetworkcast.mdx
@@ -2,7 +2,7 @@
 layout: "@/layouts/BlogPost"
 title: PodNetworkCast
 publishDate: 19 Nov 2022
-description: Ciao cari lettori, in questo nuovo articolo vi parlero di un mio nuovo progetto.
+description: Ciao cari lettori, in questo nuovo articolo vi aggiornerò su Project Network che piano piano sta prendendo forma.
 tags: ["Tech", "Network", "Podcast"]
 ---
 
